ISE-271 updated README, attribute names and subesequently the recipes